--- a/src/Components/Courses/Courses.css
+++ b/src/Components/Courses/Courses.css
@@ -15,6 +15,8 @@
 .single-course {
     background: #e7e6e712;
     margin-bottom: 30px;
+    min-height: 360px;
+    position: relative;
 }
 
 .course-title {
@@ -73,4 +75,7 @@
     font-size: 20px;
     padding: 5px 0px;
     font-weight: 600;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
